// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`buildUserInvitedNotRegisteredEmailBody Testing for account 160782110667 Should build the correct message for FAILED status 1`] = `
Object {
  "Destination": Object {
    "ToAddresses": Array [
      "test@example.com",
    ],
  },
  "Message": Object {
    "Body": Object {
      "Html": Object {
        "Charset": "UTF-8",
        "Data": "
        <html>
        <head>
        </head>
        <body>
            <h3>Hello Test,</h3>
            <p>Thanks for using Cellenics! <br/>
            <br />
              
      Unfortunately, when trying to run the analysis the data processing failed for your experiment: <br/>
      <a href=\\"https://scp.biomage.net/experiments/mock-experiment-id/data-processing\\">https://scp.biomage.net/experiments/mock-experiment-id/data-processing</a> <br/>
      We are working hard to identify and fix the issue. We will let you know as soon as your data is ready to explore. <br/>
      <br/><br/>
              <small> <br/> <br/> You can disable the notifications for this experiment when you start processing it again. </small>
            <p/>
        </body>
      </html>",
      },
      "Text": Object {
        "Charset": "UTF-8",
        "Data": "
        <html>
        <head>
        </head>
        <body>
            <h3>Hello Test,</h3>
            <p>Thanks for using Cellenics! <br/>
            <br />
              
      Unfortunately, when trying to run the analysis the data processing failed for your experiment: <br/>
      <a href=\\"https://scp.biomage.net/experiments/mock-experiment-id/data-processing\\">https://scp.biomage.net/experiments/mock-experiment-id/data-processing</a> <br/>
      We are working hard to identify and fix the issue. We will let you know as soon as your data is ready to explore. <br/>
      <br/><br/>
              <small> <br/> <br/> You can disable the notifications for this experiment when you start processing it again. </small>
            <p/>
        </body>
      </html>",
      },
    },
    "Subject": Object {
      "Charset": "UTF-8",
      "Data": "Cellenics experiment status",
    },
  },
  "Source": "some@email.com",
}
`;

exports[`buildUserInvitedNotRegisteredEmailBody Testing for account 160782110667 Should build the correct message for SUCCEEDED status 1`] = `
Object {
  "Destination": Object {
    "ToAddresses": Array [
      "test@example.com",
    ],
  },
  "Message": Object {
    "Body": Object {
      "Html": Object {
        "Charset": "UTF-8",
        "Data": "
        <html>
        <head>
        </head>
        <body>
            <h3>Hello Test,</h3>
            <p>Thanks for using Cellenics! <br/>
            <br />
              
      The data processing pipeline has completed successfully and your data is now ready to explore:<br/>
      <a href=\\"https://scp.biomage.net/experiments/mock-experiment-id/data-processing\\">https://scp.biomage.net/experiments/mock-experiment-id/data-processing</a>
      <br />
      <br />
      Happy analysing! <br/><br/><br/>
              <small> <br/> <br/> You can disable the notifications for this experiment when you start processing it again. </small>
            <p/>
        </body>
      </html>",
      },
      "Text": Object {
        "Charset": "UTF-8",
        "Data": "
        <html>
        <head>
        </head>
        <body>
            <h3>Hello Test,</h3>
            <p>Thanks for using Cellenics! <br/>
            <br />
              
      The data processing pipeline has completed successfully and your data is now ready to explore:<br/>
      <a href=\\"https://scp.biomage.net/experiments/mock-experiment-id/data-processing\\">https://scp.biomage.net/experiments/mock-experiment-id/data-processing</a>
      <br />
      <br />
      Happy analysing! <br/><br/><br/>
              <small> <br/> <br/> You can disable the notifications for this experiment when you start processing it again. </small>
            <p/>
        </body>
      </html>",
      },
    },
    "Subject": Object {
      "Charset": "UTF-8",
      "Data": "Cellenics experiment status",
    },
  },
  "Source": "some@email.com",
}
`;

exports[`buildUserInvitedNotRegisteredEmailBody Testing for account 160782110667 Should not show additional retry info for HMS emails 1`] = `
Object {
  "Destination": Object {
    "ToAddresses": Array [
      "test@example.com",
    ],
  },
  "Message": Object {
    "Body": Object {
      "Html": Object {
        "Charset": "UTF-8",
        "Data": "
        <html>
        <head>
        </head>
        <body>
            <h3>Hello Test,</h3>
            <p>Thanks for using Cellenics! <br/>
            <br />
              
      Unfortunately, when trying to run the analysis the data processing failed for your experiment: <br/>
      <a href=\\"https://scp.biomage.net/experiments/mock-experiment-id/data-processing\\">https://scp.biomage.net/experiments/mock-experiment-id/data-processing</a> <br/>
      We are working hard to identify and fix the issue. We will let you know as soon as your data is ready to explore. <br/>
      <br/><br/>
              <small> <br/> <br/> You can disable the notifications for this experiment when you start processing it again. </small>
            <p/>
        </body>
      </html>",
      },
      "Text": Object {
        "Charset": "UTF-8",
        "Data": "
        <html>
        <head>
        </head>
        <body>
            <h3>Hello Test,</h3>
            <p>Thanks for using Cellenics! <br/>
            <br />
              
      Unfortunately, when trying to run the analysis the data processing failed for your experiment: <br/>
      <a href=\\"https://scp.biomage.net/experiments/mock-experiment-id/data-processing\\">https://scp.biomage.net/experiments/mock-experiment-id/data-processing</a> <br/>
      We are working hard to identify and fix the issue. We will let you know as soon as your data is ready to explore. <br/>
      <br/><br/>
              <small> <br/> <br/> You can disable the notifications for this experiment when you start processing it again. </small>
            <p/>
        </body>
      </html>",
      },
    },
    "Subject": Object {
      "Charset": "UTF-8",
      "Data": "Cellenics experiment status",
    },
  },
  "Source": "some@email.com",
}
`;

exports[`buildUserInvitedNotRegisteredEmailBody Testing for account 242905224710 Should build the correct message for FAILED status 1`] = `
Object {
  "Destination": Object {
    "ToAddresses": Array [
      "test@example.com",
    ],
  },
  "Message": Object {
    "Body": Object {
      "Html": Object {
        "Charset": "UTF-8",
        "Data": "
        <html>
        <head>
        </head>
        <body>
            <h3>Hello Test,</h3>
            <p>Thanks for using Cellenics! <br/>
            <br />
              
      Unfortunately, when trying to run the analysis the data processing failed for your experiment: <br/>
      <a href=\\"https://scp.biomage.net/experiments/mock-experiment-id/data-processing\\">https://scp.biomage.net/experiments/mock-experiment-id/data-processing</a> <br/>
      We are working hard to identify and fix the issue. We will let you know as soon as your data is ready to explore. <br/>
      <br/><br/>
              <small> <br/> <br/> You can disable the notifications for this experiment when you start processing it again. </small>
            <p/>
        </body>
      </html>",
      },
      "Text": Object {
        "Charset": "UTF-8",
        "Data": "
        <html>
        <head>
        </head>
        <body>
            <h3>Hello Test,</h3>
            <p>Thanks for using Cellenics! <br/>
            <br />
              
      Unfortunately, when trying to run the analysis the data processing failed for your experiment: <br/>
      <a href=\\"https://scp.biomage.net/experiments/mock-experiment-id/data-processing\\">https://scp.biomage.net/experiments/mock-experiment-id/data-processing</a> <br/>
      We are working hard to identify and fix the issue. We will let you know as soon as your data is ready to explore. <br/>
      <br/><br/>
              <small> <br/> <br/> You can disable the notifications for this experiment when you start processing it again. </small>
            <p/>
        </body>
      </html>",
      },
    },
    "Subject": Object {
      "Charset": "UTF-8",
      "Data": "Cellenics experiment status",
    },
  },
  "Source": "some@email.com",
}
`;

exports[`buildUserInvitedNotRegisteredEmailBody Testing for account 242905224710 Should build the correct message for SUCCEEDED status 1`] = `
Object {
  "Destination": Object {
    "ToAddresses": Array [
      "test@example.com",
    ],
  },
  "Message": Object {
    "Body": Object {
      "Html": Object {
        "Charset": "UTF-8",
        "Data": "
        <html>
        <head>
        </head>
        <body>
            <h3>Hello Test,</h3>
            <p>Thanks for using Cellenics! <br/>
            <br />
              
      The data processing pipeline has completed successfully and your data is now ready to explore:<br/>
      <a href=\\"https://scp.biomage.net/experiments/mock-experiment-id/data-processing\\">https://scp.biomage.net/experiments/mock-experiment-id/data-processing</a>
      <br />
      <br />
      Happy analysing! <br/><br/><br/>
              <small> <br/> <br/> You can disable the notifications for this experiment when you start processing it again. </small>
            <p/>
        </body>
      </html>",
      },
      "Text": Object {
        "Charset": "UTF-8",
        "Data": "
        <html>
        <head>
        </head>
        <body>
            <h3>Hello Test,</h3>
            <p>Thanks for using Cellenics! <br/>
            <br />
              
      The data processing pipeline has completed successfully and your data is now ready to explore:<br/>
      <a href=\\"https://scp.biomage.net/experiments/mock-experiment-id/data-processing\\">https://scp.biomage.net/experiments/mock-experiment-id/data-processing</a>
      <br />
      <br />
      Happy analysing! <br/><br/><br/>
              <small> <br/> <br/> You can disable the notifications for this experiment when you start processing it again. </small>
            <p/>
        </body>
      </html>",
      },
    },
    "Subject": Object {
      "Charset": "UTF-8",
      "Data": "Cellenics experiment status",
    },
  },
  "Source": "some@email.com",
}
`;

exports[`buildUserInvitedNotRegisteredEmailBody Testing for account 242905224710 Should not show additional retry info for HMS emails 1`] = `
Object {
  "Destination": Object {
    "ToAddresses": Array [
      "test@example.com",
    ],
  },
  "Message": Object {
    "Body": Object {
      "Html": Object {
        "Charset": "UTF-8",
        "Data": "
        <html>
        <head>
        </head>
        <body>
            <h3>Hello Test,</h3>
            <p>Thanks for using Cellenics! <br/>
            <br />
              
      Unfortunately, when trying to run the analysis the data processing failed for your experiment: <br/>
      <a href=\\"https://scp.biomage.net/experiments/mock-experiment-id/data-processing\\">https://scp.biomage.net/experiments/mock-experiment-id/data-processing</a> <br/>
      We are working hard to identify and fix the issue. We will let you know as soon as your data is ready to explore. <br/>
      <br/><br/>
              <small> <br/> <br/> You can disable the notifications for this experiment when you start processing it again. </small>
            <p/>
        </body>
      </html>",
      },
      "Text": Object {
        "Charset": "UTF-8",
        "Data": "
        <html>
        <head>
        </head>
        <body>
            <h3>Hello Test,</h3>
            <p>Thanks for using Cellenics! <br/>
            <br />
              
      Unfortunately, when trying to run the analysis the data processing failed for your experiment: <br/>
      <a href=\\"https://scp.biomage.net/experiments/mock-experiment-id/data-processing\\">https://scp.biomage.net/experiments/mock-experiment-id/data-processing</a> <br/>
      We are working hard to identify and fix the issue. We will let you know as soon as your data is ready to explore. <br/>
      <br/><br/>
              <small> <br/> <br/> You can disable the notifications for this experiment when you start processing it again. </small>
            <p/>
        </body>
      </html>",
      },
    },
    "Subject": Object {
      "Charset": "UTF-8",
      "Data": "Cellenics experiment status",
    },
  },
  "Source": "some@email.com",
}
`;
